[package]
name = "metrics_aggregate"
version = "0.1.0"
authors = ["Musee Ullah <musee.ullah@fireeye.com>"]
description = """
Aggregate Prometheus /metrics endpoint over several Unix socket HTTP endpoints.
"""

[dependencies]
unix_socket = '0.4.5'
core_mini_http = { git = "https://github.com/hashmismatch/core_mini_http.rs" }
chunked_transfer = '0.3.1'
nom = '*'
#regex='*'
#hyper='*'
#httparse='*'
#http-muncher='*'
#iron='*'
#bodyparser='*'
